Reduce the dark theme b/c it inhibits visibility of custom headings

--- a/src/less/skins/ui/dvusd/skin.less
+++ b/src/less/skins/ui/dvusd/skin.less
@@ -11,5 +11,5 @@
 // Place your variables here
 //
 
-@background-color: #484848;
-@color-black: #05365B;
+@background-color: #f9f8f3;
+@color-black: #05365b;
